# age_by_photo

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: inference.py  main.py
app/static/: style.css
app/templates/: index.html  result.html
notebooks/: EDA_Preprocessing_Augmentation.ipynb
scripts/: check_augmented.py  evaluate_model.py  run_train.bat  train.py
