[tool.poetry]
name = "face_age_classification"
version = "0.1.0"
description = "Проект по классификации возрастных классов лиц с использованием ResNet50 и переноса обучения."
authors = ["Ваше Имя <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
opencv-python = "^4.7.0.72"
Pillow = "^9.5.0"
tqdm = "^4.65.0"
albumentations = "^1.3.0"
mtcnn = "^0.1.1"
tensorflow = "^2.12.0"
scikit-learn = "^1.2.0"  # Добавлено для дополнительных метрик и утилит

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.1.0"
isort = "^5.12.0"
jupyter = "^1.0.0"  # Для работы с Jupyter Notebook

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
